panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__call__test_call_varargs_with_params_on_stack.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/call/test_call_varargs_with_params_on_stack.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_call_varargs_with_params_on_stack.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=152
      (main~1 `fn(argc: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (argc~3 `int` @0)
         (argv~4 `ptr<ptr<char>>` @8))
      (compound-statement
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (1 `int` @48)
               (2 `int` @52)
               (3 `int` @56)
               (4 `int` @60)
               (5 `int` @64)
               (6 `int` @68)
               (7 `int` @72)
               (8 `int` @76)
               (9 `int` @80)
               (add `int` @84
                  (argc~3 `int` @0)
                  (42 `int` @88)))))))

----- stderr -----
