panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__call__test_params_on_stack.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/call/test_params_on_stack.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_params_on_stack.c"
   (declaration external (f~0 `fn(∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int) -> int` (static f)) ∅)
   (function-definition external stack-size=24
      (id~1 `fn(n: int) -> int` (static id))
      (params
         (n~3 `int` @0))
      (compound-statement
         (return (n~3 `int` @0))))
   (function-definition external stack-size=120
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (return
            (call `int` @0
               (addressof `ptr<fn(∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int) -> int>` @8
                  (f~0 `fn(∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int, ∅: int) -> int` (static f)))
               (1 `int` @16)
               (2 `int` @20)
               (3 `int` @24)
               (4 `int` @28)
               (5 `int` @32)
               (6 `int` @36)
               (7 `int` @40)
               (8 `int` @44)
               (9 `int` @48)
               (call `int` @52
                  (addressof `ptr<fn(n: int) -> int>` @56
                     (id~1 `fn(n: int) -> int` (static id)))
                  (10 `int` @64))
               (11 `int` @68)))))
   (function-definition external stack-size=56
      (f~0 `fn(a1: int, a2: int, a3: int, a4: int, a5: int, a6: int, a7: int, a8: int, a9: int, a10: int, a11: int) -> int` (static f))
      (params
         (a1~8 `int` @0)
         (a2~9 `int` @4)
         (a3~10 `int` @8)
         (a4~11 `int` @12)
         (a5~12 `int` @16)
         (a6~13 `int` @20)
         (a7~14 `int` @24)
         (a8~15 `int` @28)
         (a9~16 `int` @32)
         (a10~17 `int` @36)
         (a11~18 `int` @40))
      (compound-statement
         (return (a10~17 `int` @36)))))

----- stderr -----
