panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__call__test_return_void_from_void_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/call/test_return_void_from_void_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_return_void_from_void_function.c"
   (function-definition external stack-size=8
      (f~0 `fn() -> void` (static f))
      (compound-statement))
   (function-definition external stack-size=24
      (g~2 `fn() -> void` (static g))
      (compound-statement
         (return
            (call `void` @void
               (addressof `ptr<fn() -> void>` @0
                  (f~0 `fn() -> void` (static f)))))))
   (function-definition external stack-size=24
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `void` @void
               (addressof `ptr<fn() -> void>` @0
                  (g~2 `fn() -> void` (static g))))))))

----- stderr -----
