panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__call__test_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/call/test_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_simple.c"
   (function-definition external stack-size=24
      (f~0 `fn(x: int) -> int` (static f))
      (params
         (x~2 `int` @0))
      (compound-statement
         (return (x~2 `int` @0))))
   (function-definition external stack-size=24
      (main~3 `fn() -> int` (static main))
      (compound-statement
         (definition (x~5 `int` @0) (42 `int` @0))
         (definition (y~6 `int` @4)
            (call `int` @4
               (addressof `ptr<fn(x: int) -> int>` @8
                  (f~0 `fn(x: int) -> int` (static f)))
               (x~5 `int` @0)))
         (return (y~6 `int` @4)))))

----- stderr -----
