panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__call__test_simple_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/call/test_simple_declaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/call/test_simple_declaration.c"
   (declaration external (f~0 `fn(∅: int) -> int` (static f)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (return
            (call `int` @0
               (addressof `ptr<fn(∅: int) -> int>` @8
                  (f~0 `fn(∅: int) -> int` (static f)))
               (42 `int` @16)))))
   (function-definition external stack-size=24
      (f~0 `fn(x: int) -> int` (static f))
      (params
         (x~5 `int` @0))
      (compound-statement
         (return (x~5 `int` @0)))))

----- stderr -----
